rename project-name from p5js-gallery to threejs-gallery

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>p5.js gallery</title>
+    <title>three.js gallery</title>
 
     <!-- update the version number as needed -->
     <script defer src="/__/firebase/7.3.0/firebase-app.js"></script>
@@ -24,7 +24,7 @@
       }
     </style>
   </head>
-  <body>
+  <body style="overflow: hidden;">
     <div id="root"/>
     <p id="load">Firebase SDK Loading&hellip;</p>
 
